kubernetes/apps/istio-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    istio-injection: enabled
    secrets-injection: enabled
  annotations:
    volsync.backube/privileged-movers: "true"
